@@ -112,6 +112,9 @@ static QGpgMEEncryptJob::result_type encrypt(Context *ctx, QThread *thread,
 
     QGpgME::QIODeviceDataProvider in(plainText);
     Data indata(&in);
+    if (!plainText->isSequential()) {
+        indata.setSizeHint(plainText->size());
+    }
 
     const auto pureFileName = QFileInfo{fileName}.fileName().toStdString();
     if (!pureFileName.empty()) {
