@@ -1,12 +1,17 @@
 Noteworthy changes in version 1.21.0 (unreleased)
 -------------------------------------------------
 
+ * Qt Jobs working with QIODeviceDataProvider now properly
+ handle input-size hints and progress for files larger.
+ 2^32 bytes in 32 bit builds.  [T6534]
+
  * Error::isCanceled now also returns true for error code
    GPG_ERR_FULLY_CANCELED.  [T6510]
 
 * Interface changes relative to the 1.20.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  cpp: Data::setFlag                         NEW.
+ cpp: Data::setSizeHint                     NEW.
 
 Noteworthy changes in version 1.20.0 (2023-04-20)
 -------------------------------------------------
